force-app/main/default/objects/X7S_News_Translation__c/X7S_News_Translation__c.object-meta.xml
<CustomObject>
    <description>Object to support News Translation records as part of the News accelerator from 7Summits.</description>
    <label>7S News Translation</label>
    <nameField>
        <label>7s News Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S News Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>