force-app/main/default/objects/X7S_News_Translation__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <label>English</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>