force-app/main/default/objects/X7S_News_Translation__c/fields/Parent_X7S_News__c.field-meta.xml
<CustomField>
    <fullName>Parent_X7S_News__c</fullName>
    <label>Parent</label>
    <referenceTo>X7S_News__c</referenceTo>
    <relationshipName>X7S_News_Translation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>